# CameraPlugin

./: CMakeLists.txt  CameraPlugin.cpp  Makefile  build.sh  debug.sh  log.txt  main.cpp
config/include/: CCmdLineParser.hpp  CConfig.hpp  CElementDescriptionCollector.hpp  COptionParser.hpp  CPipelineConfig.hpp
config/src/: CCmdLineParser.cpp  CConfig.cpp  CElementDescriptionCollector.cpp  COptionParser.cpp
control_channel/include/: CControlChannelManager.hpp  CIpcLinkLinux.hpp  CIpcLinkQnx.hpp  CMsgCommon.hpp  CMsgReader.hpp  CMsgWriter.hpp
control_channel/src/: CControlChannelManager.cpp  CIpcLinkLinux.cpp  CIpcLinkQnx.cpp  CMsgReader.cpp  CMsgWriter.cpp
core/include/: CBaseModule.hpp  CBufAggregator.hpp  CChannel.hpp  CClientCommon.hpp  CConsumer.hpp  CElementDescription.hpp  CEventHandler.hpp  CFactory.hpp  CManager.hpp  CNvPlayfairWrapper.hpp  CPassthroughConsumer.hpp  CPassthroughPoolManager.hpp  CPassthroughProducer.hpp  CPeerValidator.hpp  CPoolManager.hpp  CProducer.hpp  CProfiler.hpp  CStatusManager.hpp  CSyncAggregator.hpp
core/src/: CBaseModule.cpp  CBufAggregator.cpp  CChannel.cpp  CClientCommon.cpp  CConsumer.cpp  CFactory.cpp  CManager.cpp  CNvPlayfairWrapper.cpp  CPassthroughConsumer.cpp  CPassthroughPoolManager.cpp  CPassthroughProducer.cpp  CPeerValidator.cpp  CPoolManager.cpp  CProducer.cpp  CProfiler.cpp  CStatusManager.cpp  CSyncAggregator.cpp
data/: cameraplugin_config.json  multi_config.json  single_config.json  test_config.json
features/car_detect/data/: XY_FixPtMap.raw  XY_FixPtMap_Resize.raw  XY_UV_FixPtMap.raw  XY_UV_FixPtMap_Resize.raw  boundingBox.map
features/car_detect/include/: CCarDetector.hpp  CNvInferContext.hpp  CNvInferTask.hpp  CPvaUtil.h  CarCommon.hpp  cuda_kernels.h  pva_pre.h
features/car_detect/src/: CCarDetector.cpp  CNvInferContext.cpp  CNvInferTask.cpp  CPvaUtil.cpp  cuda_kernels.cu
features/low_power_mode/data/: XY_FixPtMap.raw  XY_FixPtMap_Resize.raw  XY_UV_FixPtMap.raw  XY_UV_FixPtMap_Resize.raw  boundingBox.txt
features/low_power_mode/include/: CPvaLowPowerAlgos.hpp
features/low_power_mode/src/: CPvaLowPowerAlgos.cpp
features/vksc_scenes/data/: car_model_notexture_render_pipeline.json  car_model_render_pipeline.json  carmodel_notexture.shader.frag.spv  timestamp.shader.frag.spv  timestamp_render_pipeline.json
features/vksc_scenes/include/: CCarModelVulkanSC.hpp  CFontVulkanSC.hpp  CVulkanSCSceneBase.hpp
features/vksc_scenes/shader/: carmodel.shader.frag  carmodel.shader.vert  carmodel_notexture.shader.frag  timestamp.shader.frag  timestamp.shader.vert
features/vksc_scenes/src/: CCarModelVulkanSC.cpp  CFontVulkanSC.cpp  CVulkanSCSceneBase.cpp
lib/gen2/linux/: libcupva_host.so.2.5  libcupva_host_utils.so.2.5
lib/gen2/qnx-safety/: libcupva_host_safety.so.2.5  libcupva_host_utils_safety.so.2.5
modules/include/: CCudaModule.hpp  CEncModule.hpp  CFileSourceModule.hpp  CFrameDecoder.hpp  CFrameHandler.hpp  CFrameReader.hpp  CNvm2dModule.hpp  CPvaModule.hpp  CSiplCamera.hpp  CSiplModule.hpp  CSiplModuleCallback.hpp  CVicConfigurator.hpp  CVirtualDstModule.hpp  CVirtualSrcModule.hpp  CVulkanSCEngine.hpp  CVulkanSCModule.hpp  CWFDDisplayModule.hpp
modules/src/: CCudaModule.cpp  CEncModule.cpp  CFileSourceModule.cpp  CFrameDecoder.cpp  CFrameHandler.cpp  CFrameReader.cpp  CNvm2dModule.cpp  CPvaModule.cpp  CSiplCamera.cpp  CSiplModule.cpp  CVirtualDstModule.cpp  CVirtualSrcModule.cpp  CVulkanSCEngine.cpp  CVulkanSCModule.cpp  CWFDDisplayModule.cpp
platform/orin/: ar0820.hpp  imx623vb2.hpp  imx728vb2.hpp  isx031.hpp  max96712_tpg_yuv.hpp
platform/thor/: ar0820.hpp  imx623vb2.hpp  imx728vb2.hpp  isx031.hpp  max96712_tpg_yuv.hpp
plugin/include/: CameraPlugin.hpp  CameraPluginIf.hpp  CameraPluginOrin.hpp  ConfigParser.hpp
plugin/src/: CameraPlugin.cpp  CameraPluginOrin.cpp  ConfigParser.cpp
samples/: main.cc
scripts/: toolchain.cmake
services/status_manager/include/: CStatusManagerClient.hpp  CStatusManagerCommon.hpp  CStatusManagerLinuxHelper.hpp  CStatusManagerQnxHelper.hpp  CStatusManagerService.hpp
services/status_manager/src/: CStatusManagerClient.cpp  CStatusManagerCommon.cpp  CStatusManagerLinuxHelper.cpp  CStatusManagerQnxHelper.cpp  CStatusManagerService.cpp
utils/include/: CFileSink.hpp  CLogger.hpp  CThreadPool.hpp  CTimer.hpp  CUtils.hpp  Common.hpp  cudaUtility.h  cvt2d_kernels.h
utils/src/: CFileSink.cpp  CLogger.cpp  CThreadPool.cpp  CTimer.cpp  CUtils.cpp  cvt2d_kernels.cu
