cmake_minimum_required(VERSION 3.10.0)
project(CameraPlugin VERSION 0.1.0 LANGUAGES C CXX)


set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CUDA_STANDARD 11)
set(CMAKE_C_STANDARD 99)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

if (DEFINED CUDA_DIR)
    if((DEFINED CUDA_TOOLKIT_ROOT_DIR) AND (NOT CUDA_TOOLKIT_ROOT_DIR STREQUAL CUDA_DIR))
        message(FATAL_ERROR "Cannot set both CUDA_DIR and (legacy) CUDA_TOOLKIT_ROOT_DIR")
    endif()
elseif (DEFINED ENV{CUDA_INSTALL_DIR})
    set(CUDA_DIR $ENV{CUDA_INSTALL_DIR})
else()
    set(CUDA_DIR  "/usr/local/cuda/" CACHE PATH "CUDA Toolkit location.")
endif()
if(NOT CMAKE_CUDA_COMPILER)
    set(CMAKE_CUDA_COMPILER "${CUDA_DIR}/bin/nvcc")
endif()

set(CMAKE_CUDA_HOST_LINK_LAUNCHER "${CUDA_DIR}/bin/nvcc")
set(CUDA_LIBRARY_DIRS ${CUDA_DIR}/targets/aarch64-linux/lib)
set(CMAKE_EXE_LINKER_FLAGS      "${QNX_LINKER_FLAGS} -L${CUDA_LIBRARY_DIRS} -Wl,-rpath-link,${CUDA_LIBRARY_DIRS}  ${CMAKE_EXE_LINKER_FLAGS}")

set(CMAKE_CUDA_HOST_COMPILER /usr/bin/aarch64-linux-gnu-g++)
set(CUDA_INCLUDE_DIRS ${CUDA_DIR}/targets/aarch64-linux/include)
set(CUDA_LIB_DIRS ${CUDA_DIR}/targets/aarch64-linux/lib)
enable_language(CUDA)

add_library(CameraPlugin
    ${CMAKE_CURRENT_SOURCE_DIR}/plugin/src/CameraPlugin.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/plugin/src/ConfigParser.cpp
)

if(DEFINED ENV{NV_WORKSPACE})
    set(PDK_PATH "$ENV{NV_WORKSPACE}")
else()
    set(PDK_PATH "/home/lw/Workspace/ns/pdk")
endif()

target_include_directories(${PROJECT_NAME} PRIVATE ${PDK_PATH}/drive-linux/include)
target_include_directories(${PROJECT_NAME} PRIVATE ${PDK_PATH}/drive-linux/include/nvmedia_6x/)
target_include_directories(${PROJECT_NAME} PRIVATE ${PDK_PATH}/drive-linux/include/VulkanSC)
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/utils/include/)
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/plugin/include/)
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/core/include/)
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/control_channel/include/)
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/json/include/)
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/modules/include/)
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/config/include/)
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/config/include/)
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/features/low_power_mode/include)
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/services/status_manager/include)
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/features/vksc_scenes/include)
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/)
target_include_directories(${PROJECT_NAME} PRIVATE ${CUDA_INCLUDE_DIRS})

target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/utils/src/CThreadPool.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/utils/src/CUtils.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/utils/src/CTimer.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/utils/src/CFileSink.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/utils/src/CLogger.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/plugin/src/ConfigParser.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/core/src/CPassthroughConsumer.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/core/src/CProducer.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/core/src/CNvPlayfairWrapper.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/core/src/CClientCommon.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/core/src/CConsumer.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/core/src/CChannel.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/core/src/CPassthroughProducer.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/core/src/CFactory.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/core/src/CPassthroughPoolManager.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/core/src/CStatusManager.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/services/status_manager/src/CStatusManagerClient.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/services/status_manager/src/CStatusManagerCommon.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/core/src/CPeerValidator.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/core/src/CPoolManager.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/core/src/CBufAggregator.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/core/src/CSyncAggregator.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/core/src/CBaseModule.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/core/src/CManager.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/core/src/CProfiler.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/control_channel/src/CMsgReader.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/control_channel/src/CIpcLinkQnx.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/control_channel/src/CMsgWriter.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/control_channel/src/CControlChannelManager.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/control_channel/src/CIpcLinkLinux.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/modules/src/CVirtualDstModule.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/modules/src/CVirtualSrcModule.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/modules/src/CWFDDisplayModule.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/modules/src/CFrameDecoder.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/modules/src/CNvm2dModule.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/modules/src/CSiplModule.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/modules/src/CFrameHandler.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/modules/src/CSiplCamera.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/modules/src/CEncModule.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/modules/src/CPvaModule.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/modules/src/CFileSourceModule.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/modules/src/CCudaModule.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/modules/src/CFrameReader.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/config/src/COptionParser.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/config/src/CCmdLineParser.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/config/src/CConfig.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/config/src/CElementDescriptionCollector.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/features/low_power_mode/src/CPvaLowPowerAlgos.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/utils/src/cudaYUV-NV12.cu)
target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/utils/src/cvt2d_kernels.cu)

# target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/modules/src/CVulkanSCEngine.cpp)
# target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/modules/src/CVulkanSCModule.cpp)

target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/uvgRTP/include)
target_link_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/uvgRTP/lib/)
target_link_libraries(${PROJECT_NAME} PRIVATE uvgrtp)
target_link_directories(${PROJECT_NAME} PUBLIC ${PDK_PATH}/drive-linux/lib-target)
target_link_directories(${PROJECT_NAME} PUBLIC ${CUDA_LIB_DIRS})
target_link_libraries(${PROJECT_NAME} PUBLIC cam_fsync nvmedia_iep_sci nvscistream nvmedia2d nvscibuf nvscisync nvsciipc nvscicommon cuda cudart tegrawfd)
target_link_libraries(${PROJECT_NAME} PUBLIC nvsipl nvsipl_query nvmedia_ide_parser nvmedia_ide_sci)

add_executable(CameraPluginExec ${CMAKE_CURRENT_SOURCE_DIR}/samples/main.cc)
target_link_libraries(CameraPluginExec PRIVATE ${PROJECT_NAME})
target_link_directories(CameraPluginExec PRIVATE ${PDK_PATH}/drive-linux/lib-target)
# target_link_libraries(CameraPluginExec PRIVATE cam_fsync nvmedia_iep_sci nvmedia_ide_parser nvscistream nvmedia2d nvscibuf nvscisync nvsciipc nvscicommon cuda tegrawfd nvsipl nvsipl_query)
# target_link_libraries(CameraPluginExec PRIVATE nvmedia_ide_sci nvvideo nvos nvsocsys nvrm_surface nvparser nvscievent nvrm_mem nvvic nvrm_gpu gnat-24 nvrm_host1x nvidia-kms nvsipl_devblk nvfusacap nvsipl_control)
# target_link_libraries(CameraPluginExec PRIVATE nvidia-kms nvrm_stream nvrm_chip nvrm_sync nvtegrahv nvsipl_devblk_cdi nvsipl_devblk_ddi nvsipl_devblk_crpyto)
target_link_options(CameraPluginExec PRIVATE "-Wl,-rpath-link=${PDK_PATH}/drive-linux/lib-target/")
target_include_directories(CameraPluginExec PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/plugin/include)
target_include_directories(CameraPluginExec PRIVATE ${CUDA_INCLUDE_DIRS})
